# theory_test_exam

./: Cargo.toml  LICENSE  README.md
docs/: 404.html  index.html
docs/assets/: main-b876753f4e343c88.css.br  theory_test_ui-ed3d8c8a6c1f0a49.js  theory_test_ui_bg-ca7de98f33786b16.wasm  theory_test_ui_bg-ca7de98f33786b16.wasm.br  theory_test_ui_bg-f13ad9f5cfff32f6.wasm  theory_test_ui_bg-f13ad9f5cfff32f6.wasm.br
theory_test_parser/: Cargo.toml  test.xlsx
theory_test_parser/src/: lib.rs  main.rs  question_parser.rs
theory_test_ui/: .gitignore  Cargo.toml  Dioxus.toml
theory_test_ui/assets/: main.css
theory_test_ui/docs/public/assets/: main-b876753f4e343c88.css  theory_test_ui-ed3d8c8a6c1f0a49.js.br  theory_test_ui_bg-c1ba06dd69a6f651.wasm  theory_test_ui_bg-c1ba06dd69a6f651.wasm.br
theory_test_ui/src/: main.rs
